Added styling for devices

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="game" id="game">
     <div class="content">
       <h3>GAME</h3>
-      <p class="success" id="win">You have completed the game successfully in moves. Click start to play again.</p>
+      <p class="success" id="win"></p>
       <button type="button" onclick="newDeck();"><b>START</b></button>     
       <div class="card-deck" id="deck">
       </div>
